increased test coverage
