# core/domain/src/main/java/com/felpeto/realestate/domain/person/vo/CnpjValidator.java
@@ -11,10 +11,10 @@ import lombok.NoArgsConstructor;
 @NoArgsConstructor(access = PRIVATE)
 public class CnpjValidator {
 
-  private static final Set<String> INVALID_DOCUMENTS = new HashSet<>(Arrays.asList(
-      "00000000000000", "11111111111111", "22222222222222", "33333333333333",
-      "44444444444444", "55555555555555", "66666666666666", "77777777777777",
-      "88888888888888", "99999999999999"));
+  private static final Set<String> INVALID_DOCUMENTS = new HashSet<>(
+      Arrays.asList("00000000000000", "11111111111111", "22222222222222", "33333333333333",
+          "44444444444444", "55555555555555", "66666666666666", "77777777777777", "88888888888888",
+          "99999999999999"));
 
   private static final String INVALID_CNPJ = "Invalid CNPJ";
   private static final String FIELD = "cnpj";
@@ -23,34 +23,27 @@ public class CnpjValidator {
   private static final String INVALID_DIGIT_MESSAGE = "The CNPJ does not exist.";
 
   public static void validate(final String cnpj) {
-    final var number = cnpj.replace(".", "")
-        .replace("-", "")
-        .replace("/", "");
+    final var number = cnpj.replace(".", "").replace("-", "").replace("/", "");
 
     if (number.length() != 14 || INVALID_DOCUMENTS.contains(number)) {
-      throw new InvalidDocumentException(INVALID_CNPJ,
-          FIELD,
-          TARGET,
-          FIELD,
+      throw new InvalidDocumentException(INVALID_CNPJ, FIELD, TARGET, FIELD,
           INVALID_FORMAT_MESSAGE);
     }
 
     final var dig13 = calculateDigit(number, 12);
     final var dig14 = calculateDigit(number, 13);
 
-    if ((dig13 != Character.getNumericValue(number.charAt(12))) ||
-        (dig14 != Character.getNumericValue(number.charAt(13)))) {
+    if ((dig13 != Character.getNumericValue(number.charAt(12)))
+        || (dig14 != Character.getNumericValue(number.charAt(13)))) {
 
-      throw new InvalidDocumentException(INVALID_CNPJ,
-          FIELD,
-          TARGET,
-          FIELD,
-          INVALID_DIGIT_MESSAGE);
+      throw new InvalidDocumentException(INVALID_CNPJ, FIELD, TARGET, FIELD, INVALID_DIGIT_MESSAGE);
     }
   }
 
   private static int calculateDigit(String number, int position) {
-    int sm = 0, num, peso = 2;
+    int sm = 0;
+    int num;
+    int peso = 2;
     for (int i = position - 1; i >= 0; i--) {
       num = number.charAt(i) - '0';
       sm += num * peso;
